WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85608
[EFL] [DRT] Clear extra views before setting a blank page
https://bugs.webkit.org/show_bug.cgi?id=85608
Summary
[EFL] [DRT] Clear extra views before setting a blank page
Thiago Marcos P. Santos
Reported
2012-05-04 05:15:05 PDT
I found out so far that running fast/frames/frame-crash-with-page-cache.html before it in the same test set makes it fail. ./Tools/Scripts/run-webkit-tests --efl --debug --no-retry-failures --no-new-test-results fast/frames/frame-crash-with-page-cache.html fast/frames/frame-dead-region.html --> FAIL ./Tools/Scripts/run-webkit-tests --efl --debug --no-retry-failures --no-new-test-results fast/frames/frame-dead-region.html --> OK It's likely to be some leftover settings from the previous test.
Attachments
Patch
(3.15 KB, patch)
2012-05-07 09:03 PDT
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thiago Marcos P. Santos
Comment 1
2012-05-07 09:03:19 PDT
Created
attachment 140534
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2012-05-07 09:23:06 PDT
Comment on
attachment 140534
[details]
Patch Looks OK.
Chris Dumez
Comment 3
2012-05-07 23:20:03 PDT
It is even crashing now for some reason: Regressions: Unexpected crashes : (1) fast/frames/frame-dead-region.html = CRASH
Gyuyoung Kim
Comment 4
2012-05-08 00:12:49 PDT
Comment on
attachment 140534
[details]
Patch LGTM.
Gyuyoung Kim
Comment 5
2012-05-08 00:32:39 PDT
(In reply to
comment #3
)
> It is even crashing now for some reason: > > Regressions: Unexpected crashes : (1) > fast/frames/frame-dead-region.html = CRASH
There is no crash on my linux box.
Chris Dumez
Comment 6
2012-05-08 01:06:55 PDT
(In reply to
comment #5
)
> (In reply to
comment #3
) > > It is even crashing now for some reason: > > > > Regressions: Unexpected crashes : (1) > > fast/frames/frame-dead-region.html = CRASH > > There is no crash on my linux box.
This is on our Debug build bot, not my box.
Kenneth Rohde Christiansen
Comment 7
2012-05-08 01:15:50 PDT
Comment on
attachment 140534
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140534&action=review
> Tools/DumpRenderTree/efl/DumpRenderTree.cpp:253 > + browser->clearExtraViews();
clearAdditionalViews() ?
Thiago Marcos P. Santos
Comment 8
2012-05-08 01:21:30 PDT
(In reply to
comment #7
)
> (From update of
attachment 140534
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=140534&action=review
> > > Tools/DumpRenderTree/efl/DumpRenderTree.cpp:253 > > + browser->clearExtraViews(); > > clearAdditionalViews() ?
I used "Extra" because the member variable "m_extraViews" and the getter "DumpRenderTreeChrome::extraViews()".
WebKit Review Bot
Comment 9
2012-05-08 02:27:47 PDT
Comment on
attachment 140534
[details]
Patch Clearing flags on attachment: 140534 Committed
r116407
: <
http://trac.webkit.org/changeset/116407
>
WebKit Review Bot
Comment 10
2012-05-08 02:27:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug