[EFL] [DRT] Clear extra views before setting a blank page https://bugs.webkit.org/show_bug.cgi?id=85608

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-05-08
Reviewed by Kenneth Rohde Christiansen.

We need to clear the extra views before setting a blank page,
otherwise it will cause more events interactions and sometimes
trigger a unload(). This was causing frame-crash-with-page-cache.html
to leak events to the next test causing any subsequent test to
fail.

* DumpRenderTree/efl/DumpRenderTree.cpp:
(runTest):
* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::clearExtraViews):
(DumpRenderTreeChrome::resetDefaultsToConsistentValues):
* DumpRenderTree/efl/DumpRenderTreeChrome.h:
(DumpRenderTreeChrome):

Canonical link: https://commits.webkit.org/103460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116407 268f45cc-cd09-0410-ab3c-d52691b4dbfc